# subtitle-anything

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: pages.yml
docs/: mkdocs.yml  pyproject.toml
docs/src/: index.md  install.md  usage.md
install/: index.html
search/: search_index.json
src/: CNAME  index.md  install.md  usage.md
src/assets/: extra.css
usage/: index.html
