[project]
name = "docs"
version = "0.0.0"
description = "Docs for Subtitle Anything" 
requires-python = ">=3.10, <=3.13"
authors = [
  {name = "ae9is", email = "aegis.opensource@gmail.com"}
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
]

[project.urls]
"Homepage" = "https://github.com/ae9is/subtitle-anything"
"Bug Reports" = "https://github.com/ae9is/subtitle-anything/issues"
"Source" = "https://github.com/ae9is/subtitle-anything/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
install-all = "pdm install -G:all"
post_install = "pdm requirements"
start = "mkdocs serve"
build = "mkdocs build"
deploy-pages = "mkdocs gh-deploy --force"
lint = "ruff check src"
format = "ruff format ."
requirements = "pdm export -o requirements.txt"
clean = "rm -rf .venv .pdm-build .pdm-python .ruff_cache dist"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.11",
]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
]
line-length = 120
indent-width = 2
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
